--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,7 +6,12 @@
     </div>
     <div class="row">
         <div class="col">
-            {{> jumbotron}}
+            {{> jumbotron status}}
         </div>
+    </div>
+    <div class="row" id="mainContent">
+            {{#each dbArticle}}
+             {{>articles this}}
+            {{/each}}
     </div>
 </div>
