--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -3,7 +3,9 @@
         <a class="navbar-brand" href="/">News Commentor</a>
         <ul>
             <li><a href="/">Home</a></li>
-            <li><a href="/scrape">Scrape Articles</a></li>
+            <li><a id="scraping" href="/scrape">Scrape Articles</a></li>
+            <li><a href="/saved">Saved Articles</a></li>
+            <li><a href="/clear">Clear Articles</a></li>
         </ul>
     </div>
 </nav>
