completed routes and site, needs a little work on css and upload to heroku

--- a/views/partials/jumbotron.handlebars
+++ b/views/partials/jumbotron.handlebars
@@ -1,6 +1,6 @@
 <div class="jumbotron">
     <div class="topTitle">
-        <h1 class="display-4">News Commentor</h1>
+        <h1 class="display-4">Gaming News Commentor</h1>
     </div>
     <div class="headline">
         {{#if this}}
