--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -62,9 +62,10 @@ padding: 0;
 }
 
 #mainContent .row {
-    height: 25vh;
+    /* height: 25vh; */
+    width: 80vw;
     color: white;
-    padding: 1vh 1vw;
+    padding: 0;
     border: 1px solid white;
     margin: auto
 
@@ -77,10 +78,19 @@ padding: 0;
 }
 
 .articlesImage img{
-    margin-top: 1.5vh;
+    margin: 1.5vh 1.5vw;
+    width: 100%;
 }
 
 .col-1 img {
     background-color: white;
     border-radius: 100px;
+}
+.icons img {
+    padding: 1vh 1vh;
+    margin: 1vh 0;
+}
+
+.modal-title, #noteBody {
+    width: 100%;
 }
