--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,8 +10,39 @@
         </div>
     </div>
     <div class="row" id="mainContent">
-            {{#each dbArticle}}
-             {{>articles this}}
-            {{/each}}
+        {{#each dbArticle}}
+        {{>articles this}}
+        {{/each}}
+
+
+
+
+
+
+    </div>
+
+
+
+
+    <div class="modal fade" id="noteModal" tabindex="-1" role="dialog" aria-labelledby="noteModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content" data-articleid="">
+                <div class="modal-header">
+                    <input type="text" class="modal-title" id="noteModalLabel" placeholder="Title">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <textarea name="noteBody" id="noteBody" cols="30" rows="10" ></textarea>
+
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
