--- a/views/partials/articles.handlebars
+++ b/views/partials/articles.handlebars
@@ -11,6 +11,6 @@
     </div>
     <div class="col-1 icons">
         <img id="heart{{this.id}}" class="heart" data-articleId={{this.id}} data-saved={{this.saved}} src={{this.hearturl}}>
-        <img id="note{{this.id}}" data-articleId={{this.id}} src="https://img.icons8.com/dusk/64/000000/note.png">
+        <img id="note{{this.id}}" class="note" data-articleId={{this.id}} src="https://img.icons8.com/dusk/64/000000/note.png">
     </div>
 </div>
