--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -1,6 +1,6 @@
 <nav class="navbar">
     <div>
-        <a class="navbar-brand" href="/">News Commentor</a>
+        <a class="navbar-brand" href="/">Gaming News Commentor</a>
         <ul>
             <li><a href="/">Home</a></li>
             <li><a id="scraping" href="/scrape">Scrape Articles</a></li>
